Finishing up first pass of front page

--- a/_data/frontpage/affiliations.yml
+++ b/_data/frontpage/affiliations.yml
@@ -1,11 +1,11 @@
 - name: Affiliation 1
-  logo: images/affiliation/logo.png
-  link: link2
+  logo: images/affiliations/logo.jpg
+  link: #
 
 - name: Affiliation 2
-  logo: images/affiliation/logo.png
-  link: link2
+  logo: images/affiliations/logo.jpg
+  link: #
 
 - name: Affiliation 3
-  logo: images/affiliation/logo.png
-  link: link2
+  logo: images/affiliations/logo.jpg
+  link: #
