--- a/_data/frontpage/features.yml
+++ b/_data/frontpage/features.yml
@@ -22,3 +22,19 @@
     indicated by indentation.
   image: /images/frontpage/feature.jpeg
 
+- title: Feature 4
+  description: |
+    This is a multi-line string.
+    "special" metacharacters may
+    appear here. The extent of this string is
+    indicated by indentation.
+  image: /images/frontpage/feature.jpeg
+
+- title: Feature 5
+  description: |
+    This is a multi-line string.
+    "special" metacharacters may
+    appear here. The extent of this string is
+    indicated by indentation.
+  image: /images/frontpage/feature.jpeg
+
