--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+permalink: pretty
 
 # Build settings
 markdown: kramdown
