--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: Download
-  link: /download
+  link: /download/
 
 - title: Blog
-  link: /blog
+  link: /blog/
 
 - title: Documentation
   submenu:
@@ -22,4 +22,4 @@
       link: https://github.com/MRtrix3/mrtrix3/issues
 
 - title: Cite
-  link: /cite
+  link: /cite/
