Polishing up blog post layout / Linking up remaining menu items

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -22,4 +22,4 @@
       link: https://github.com/MRtrix3/mrtrix3/issues
 
 - title: Cite
-  link: /cite/
+  link: https://github.com/MRtrix3/mrtrix3/wiki#acknowledging-this-work
