--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,3 +13,10 @@
   nickname: Rob
   github: Lestropie
 
+- name: Thijs Dhollander
+  nickname: Thijs
+  github: thijsdhollander
+
+- name: Ben Jeurissen
+  nickname: Ben
+  github: bjeurissen
