Polishing up publications list

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -21,5 +21,5 @@
     - title: Issue tracker
       link: https://github.com/MRtrix3/mrtrix3/issues
 
-- title: Cite
-  link: /cite/
+- title: Publications
+  link: /publications/
