--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,8 @@
 
 # Site settings
 title: MRtrix3
-description: > # this means to ignore newlines until "baseurl:"
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://www.mrtrix.org" # the base hostname & protocol for your site
 permalink: pretty
 
 # Build settings
