--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: MRtrix3
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.mrtrix.org" # the base hostname & protocol for your site
+url: "http://mrtrix3.github.io" # the base hostname & protocol for your site
 permalink: pretty
 
 # Build settings
