added Max to authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,3 +20,8 @@
 - name: Ben Jeurissen
   nickname: Ben
   github: bjeurissen
+
+- name: Maximilian Pietsch
+  nickname: Max
+  twitter: pietsch_max
+  github: maxpietsch
