Added Daan to authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,3 +25,8 @@
   nickname: Max
   twitter: pietsch_max
   github: maxpietsch
+
+- name: Daan Christiaens
+  nickname: Daan
+  github: dchristiaens
+
