First run through to clean up the content
Still need decent images for the features carousel...

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
   nickname: Donald
   github: jdtournier
   twitter: jdtournier
-  website: http://kcl.academia.edu/JacquesdonaldTournier
+  website: https://kclpure.kcl.ac.uk/portal/jacques-donald.tournier.html
 
 - name: David Raffelt
   nickname: Dave
