--- a/_data/frontpage/about.yml
+++ b/_data/frontpage/about.yml
@@ -1,6 +1,7 @@
 
-title: What is MRtrix?
+title: What is MRtrix3?
 description: | # This allows you to use an indented multi-line string
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-    quis nosrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    MRtrix3 provides a set of tools to perform various types of diffusion MRI analyses, from various forms of tractography through to next-generation group-level analyses. 
+    It is designed with consistency, performance, and stability in mind, and is freely available under an open-source license.
+    It is developed and maintained by a team of experts in the field, fostering an active community of users from diverse backgrounds. 
+
