--- a/_data/frontpage/banner.yml
+++ b/_data/frontpage/banner.yml
@@ -1,5 +1,5 @@
 title: MRtrix3
-description: The most awesome product in the world since 1903
+description: Advanced tools for the analysis of diffusion MRI data 
 buttons:
     - title: Download
       icon: fa fa-download
