--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,6 +16,8 @@
 - name: Thijs Dhollander
   nickname: Thijs
   github: thijsdhollander
+  twitter: ThijsDhollander
+  website: https://www.researchgate.net/profile/Thijs_Dhollander
 
 - name: Ben Jeurissen
   nickname: Ben
