Added registration image to frontpage features

--- a/_data/frontpage/features.yml
+++ b/_data/frontpage/features.yml
@@ -32,7 +32,7 @@
   description: |
     Designed explicitly for inter-subject alignment of fibre orientation distributions
     as provided by CSD and variants.
-  image: /images/frontpage/feature.jpeg
+  image: /images/frontpage/registration.jpg
 
 - title: Fixel-based analysis
   description: |
