General screenshot for showing off tractography.  This should show it off as a general feature.  We might have a genuine separate screenshot section in the future for more granulated screenshots of specific methods.

--- a/_data/frontpage/features.yml
+++ b/_data/frontpage/features.yml
@@ -12,9 +12,9 @@
 
 - title: Probabilistic tractography
   description: |
-    Robust and high-performance probabilistic tracking algorithm, including
+    Several robust and high-performance tracking algorithms, including
     recent additions such as Anatomically Constrained Tractography (ACT).
-  image: /images/frontpage/ACT.jpg
+  image: /images/frontpage/tractography.jpg
 
 - title: SIFT for meaningful connectivities
   description: |
