--- a/_data/frontpage/features.yml
+++ b/_data/frontpage/features.yml
@@ -40,6 +40,12 @@
     data, enabling statistical inference at the level of individual fibre populations within a voxel (fixel).
   image: /images/frontpage/fixel-based-analysis.jpg
 
+- title: Global Tractography
+  description: |
+    Full-brain track reconstruction that matches the apparent fibre density (AFD) in multi-shell DWI data,
+    based on the new multi-tissue spherical convolution paradigm.
+  image: /images/frontpage/global-tractography.jpg
+
 - title: Command-line driven for flexibility
   description: |
     Most applications are command-line driven to allow easy scripting and fully
