Add MRView image for frontpage

--- a/_data/frontpage/features.yml
+++ b/_data/frontpage/features.yml
@@ -2,7 +2,7 @@
   description: |
     A modern, full-featured viewer to display images and results efficiently
     and intuitively. 
-  image: /images/frontpage/feature.jpeg
+  image: /images/frontpage/mrview.jpg
 
 - title: Constrained spherical deconvolution (CSD)
   description: |
