--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,11 +5,7 @@
   link: /blog/
 
 - title: Documentation
-  submenu:
-    - title: User
-      link: https://github.com/MRtrix3/mrtrix3/wiki/
-    - title: Development
-      link: http://mrtrix3.github.io/developer-documentation/
+  link: https://github.com/MRtrix3/mrtrix3/wiki/
 
 - title: Community
   link: http://community.mrtrix.org/
@@ -20,6 +16,8 @@
       link: https://github.com/MRtrix3
     - title: Issue tracker
       link: https://github.com/MRtrix3/mrtrix3/issues
+    - title: API Documentation
+      link: http://mrtrix3.github.io/developer-documentation/
 
 - title: Publications
   link: /publications/
