--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 - title: Download
-  link: https://github.com/MRtrix3/mrtrix3/wiki#supported-platforms--installation
+  link: /download/ 
 
 - title: Blog
   link: /blog/
