--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,7 +17,7 @@
     - title: Issue tracker
       link: https://github.com/MRtrix3/mrtrix3/issues
     - title: API Documentation
-      link: http://mrtrix3.github.io/developer-documentation/
+      link: /developer-documentation/
 
 - title: Publications
   link: /publications/
