--- a/_data/manual_publication_links.yml
+++ b/_data/manual_publication_links.yml
@@ -1,2 +1,8 @@
 -  title: "Global tractography of multi-shell diffusion-weighted imaging data using a multi-tissue model"
    url: "http://www.sciencedirect.com/science/article/pii/S1053811915007168"
+
+-  title: "Time to move on: an FOD-based DEC map to replace DTI's trademark DEC FA"
+   url: "http://www.researchgate.net/publication/276412466_Time_to_move_on_an_FOD-based_DEC_map_to_replace_DTI's_trademark_DEC_FA"
+   
+-  title: "Panchromatic sharpening of FOD-based DEC maps by structural T1 information"
+   url: "http://www.researchgate.net/publication/276412176_Panchromatic_sharpening_of_FOD-based_DEC_maps_by_structural_T1_information"
