Add support for menu links to be open in new window
* Do this for Community and Documentation links!

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,9 +6,11 @@
 
 - title: Documentation
   link: http://mrtrix.readthedocs.org/
+  new_window: true
 
 - title: Community
   link: http://community.mrtrix.org/
+  new_window: true
 
 - title: Development
   submenu:
