Redirecting the userdocs link

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@
   link: /blog/
 
 - title: Documentation
-  link: http://mrtrix.readthedocs.org/
+  link: http://userdocs.mrtrix.org/
   new_window: true
 
 - title: Community
