Added blog post on image registration and fixel-based analysis

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,6 +8,7 @@
   nickname: Dave
   github: draffelt
   twitter: davidraffelt
+  website: https://www.researchgate.net/profile/David_Raffelt
 
 - name: Robert Smith
   nickname: Rob
