Adding Jelle to the group
* Small fixup of other affiliation images
* Updating contributor list

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -43,3 +43,7 @@
   nickname: Jimmy
   github: chunhungyeh
   discourse: chunhungyeh
+
+- name: Jelle Veraart
+  nickname: Jelle
+  github: jelleveraart
