--- a/_data/frontpage/affiliations.yml
+++ b/_data/frontpage/affiliations.yml
@@ -22,3 +22,7 @@
   logo: images/affiliations/kuleuven.png
   link: https://www.kuleuven.be/english
 
+- name: New York University School of Medicine
+  logo: images/affiliations/nyu.png
+  link: http://www.med.nyu.edu/research/about-us
+
