--- a/_data/manual_publication_links.yml
+++ b/_data/manual_publication_links.yml
@@ -1,3 +1,6 @@
+-  title: "Unsupervised 3-tissue response function estimation from single-shell or multi-shell diffusion MR data without a co-registered T1 image"
+   url: "http://www.researchgate.net/publication/307863133_Unsupervised_3-tissue_response_function_estimation_from_single-shell_or_multi-shell_diffusion_MR_data_without_a_co-registered_T1_image"
+
 -  title: "Global tractography of multi-shell diffusion-weighted imaging data using a multi-tissue model"
    url: "http://www.sciencedirect.com/science/article/pii/S1053811915007168"
 
